achala local env

--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Database": {
     "Provider": "MySql",
-    "ConnectionString": "Server=localhost;Database=MigratingAssistantDb;User=root;Password=your_password;"
+    "ConnectionString": "Server=localhost;Database=imi;User=root;Password=root;"
   },
   "Logging": {
     "LogLevel": {
