--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,7 +137,56 @@ jobs:
           path: tests/Application.FunctionalTests/TestResults
           destination: test-results/functional
 
-  build-docker-image:
+  publish-artifacts:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:8.0
+
+    resource_class: medium
+
+    steps:
+      - checkout
+
+      # Restore NuGet packages from cache
+      - restore-dotnet-cache
+
+      # Restore dependencies
+      - run:
+          name: "Restore NuGet packages"
+          command: |
+            dotnet restore
+
+      # Publish application
+      - run:
+          name: "Publish application"
+          command: |
+            dotnet publish src/Web/Web.csproj \
+              --configuration Release \
+              --output ./publish \
+              --no-restore \
+              /p:UseAppHost=false
+
+      # Create deployment package
+      - run:
+          name: "Create deployment package"
+          command: |
+            cd publish
+            tar -czf ../migratingassistant-api-${CIRCLE_SHA1}.tar.gz *
+            cd ..
+            echo "Package created: migratingassistant-api-${CIRCLE_SHA1}.tar.gz"
+            ls -lh migratingassistant-api-${CIRCLE_SHA1}.tar.gz
+
+      # Store published artifacts
+      - store_artifacts:
+          path: migratingassistant-api-${CIRCLE_SHA1}.tar.gz
+          destination: artifacts/migratingassistant-api-${CIRCLE_SHA1}.tar.gz
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - publish
+            - migratingassistant-api-*.tar.gz
+
+  build-and-push-docker:
     docker:
       - image: cimg/base:current
 
@@ -150,34 +199,226 @@ jobs:
           version: 20.10.24
           docker_layer_caching: true
 
+      # Install doctl (Digital Ocean CLI)
+      - run:
+          name: "Install doctl"
+          command: |
+            cd ~
+            wget https://github.com/digitalocean/doctl/releases/download/v1.104.0/doctl-1.104.0-linux-amd64.tar.gz
+            tar xf doctl-1.104.0-linux-amd64.tar.gz
+            sudo mv doctl /usr/local/bin
+            doctl version
+
+      # Authenticate with Digital Ocean Container Registry
+      - run:
+          name: "Authenticate with Digital Ocean Container Registry"
+          command: |
+            echo "Authenticating with Digital Ocean..."
+            echo "Registry: registry.digitalocean.com/${DO_REGISTRY_NAME:-migratingassistant}"
+
+            if [ -z "$DO_ACCESS_TOKEN" ]; then
+              echo "ERROR: DO_ACCESS_TOKEN environment variable is not set!"
+              echo "Please add it to CircleCI Project Settings → Environment Variables"
+              exit 1
+            fi
+
+            if [ -z "$DO_REGISTRY_NAME" ]; then
+              echo "ERROR: DO_REGISTRY_NAME environment variable is not set!"
+              echo "Please add it to CircleCI Project Settings → Environment Variables"
+              echo "Value should be: migratingassistant"
+              exit 1
+            fi
+
+            doctl auth init --access-token ${DO_ACCESS_TOKEN}
+            doctl registry login
+
+            echo "✓ Successfully authenticated with Digital Ocean Container Registry"
+            echo "✓ Registry: registry.digitalocean.com/${DO_REGISTRY_NAME}"
+
+      # Build Docker image
       - run:
           name: "Build Docker image"
           command: |
+            echo "Building Docker image..."
+            echo "Commit: ${CIRCLE_SHA1}"
+            echo "Branch: ${CIRCLE_BRANCH}"
+
             docker build -t migratingassistant-api:${CIRCLE_SHA1} .
             docker tag migratingassistant-api:${CIRCLE_SHA1} migratingassistant-api:latest
 
-      - run:
-          name: "Test Docker image"
-          command: |
-            docker images migratingassistant-api
+            echo "✓ Docker image built successfully"
 
-      # Optional: Push to container registry
-      # Uncomment and configure when ready
+      # Tag for Digital Ocean Container Registry
+      - run:
+          name: "Tag image for DOCR"
+          command: |
+            REGISTRY_NAME="${DO_REGISTRY_NAME}"
+            REGISTRY_URL="registry.digitalocean.com/${REGISTRY_NAME}"
+
+            echo "Tagging images for Digital Ocean Container Registry..."
+            echo "Registry: ${REGISTRY_URL}"
+            echo "Repository: migratingassistant-api"
+            echo ""
+
+            docker tag migratingassistant-api:${CIRCLE_SHA1} ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_SHA1}
+            docker tag migratingassistant-api:${CIRCLE_SHA1} ${REGISTRY_URL}/migratingassistant-api:latest
+            docker tag migratingassistant-api:${CIRCLE_SHA1} ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_BRANCH}
+
+            echo "✓ Images tagged:"
+            echo "  - ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_SHA1}"
+            echo "  - ${REGISTRY_URL}/migratingassistant-api:latest"
+            echo "  - ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_BRANCH}"
+
+      # Push to Digital Ocean Container Registry
+      - run:
+          name: "Push to Digital Ocean Container Registry"
+          command: |
+            REGISTRY_NAME="${DO_REGISTRY_NAME}"
+            REGISTRY_URL="registry.digitalocean.com/${REGISTRY_NAME}"
+
+            echo "Pushing images to Digital Ocean Container Registry..."
+            echo "This may take a few minutes depending on image size..."
+            echo ""
+
+            echo "Pushing: ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_SHA1}"
+            docker push ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_SHA1}
+
+            echo "Pushing: ${REGISTRY_URL}/migratingassistant-api:latest"
+            docker push ${REGISTRY_URL}/migratingassistant-api:latest
+
+            echo "Pushing: ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_BRANCH}"
+            docker push ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_BRANCH}
+
+            echo ""
+            echo "✓ All images pushed successfully!"
+            echo ""
+            echo "═══════════════════════════════════════════════════════"
+            echo "Images available at:"
+            echo "  ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_SHA1}"
+            echo "  ${REGISTRY_URL}/migratingassistant-api:latest"
+            echo "  ${REGISTRY_URL}/migratingassistant-api:${CIRCLE_BRANCH}"
+            echo "═══════════════════════════════════════════════════════"
+
+  deploy-to-digital-ocean:
+    docker:
+      - image: cimg/base:current
+
+    resource_class: small
+
+    steps:
+      - checkout
+
+      # Install doctl
+      - run:
+          name: "Install doctl"
+          command: |
+            cd ~
+            wget https://github.com/digitalocean/doctl/releases/download/v1.104.0/doctl-1.104.0-linux-amd64.tar.gz
+            tar xf doctl-1.104.0-linux-amd64.tar.gz
+            sudo mv doctl /usr/local/bin
+            doctl version
+
+      # Authenticate with Digital Ocean
+      - run:
+          name: "Authenticate with Digital Ocean"
+          command: |
+            doctl auth init --access-token ${DO_ACCESS_TOKEN}
+
+      # Deploy to Digital Ocean App Platform
+      - run:
+          name: "Deploy to Digital Ocean App Platform"
+          command: |
+            echo "═══════════════════════════════════════════════════════"
+            echo "Digital Ocean Deployment"
+            echo "═══════════════════════════════════════════════════════"
+
+            # Validate environment variables
+            if [ -z "$DO_APP_ID" ]; then
+              echo "ERROR: DO_APP_ID environment variable is not set!"
+              echo ""
+              echo "To fix this:"
+              echo "1. Go to https://cloud.digitalocean.com/apps"
+              echo "2. Create an app or get your existing app ID"
+              echo "3. Add DO_APP_ID to CircleCI:"
+              echo "   Project Settings → Environment Variables → Add Variable"
+              echo ""
+              exit 1
+            fi
+
+            if [ -z "$DO_REGISTRY_NAME" ]; then
+              echo "ERROR: DO_REGISTRY_NAME is not set (should be 'migratingassistant')"
+              exit 1
+            fi
+
+            # Display deployment info
+            REGISTRY_NAME="${DO_REGISTRY_NAME}"
+            REGISTRY_URL="registry.digitalocean.com/${REGISTRY_NAME}"
+            IMAGE_TAG="${CIRCLE_SHA1}"
+
+            echo "App ID: ${DO_APP_ID}"
+            echo "Registry: ${REGISTRY_URL}"
+            echo "Image: migratingassistant-api:${IMAGE_TAG}"
+            echo "Branch: ${CIRCLE_BRANCH}"
+            echo ""
+
+            echo "Deploying image: ${REGISTRY_URL}/migratingassistant-api:${IMAGE_TAG}"
+            echo ""
+
+            # Trigger deployment
+            echo "Triggering deployment (this may take 2-5 minutes)..."
+            doctl apps create-deployment ${DO_APP_ID} --wait
+
+            echo ""
+            echo "✓ Deployment completed successfully!"
+            echo ""
+            echo "═══════════════════════════════════════════════════════"
+            echo "Deployment Summary"
+            echo "═══════════════════════════════════════════════════════"
+            echo "Image: ${REGISTRY_URL}/migratingassistant-api:${IMAGE_TAG}"
+            echo "App: https://cloud.digitalocean.com/apps/${DO_APP_ID}"
+            echo ""
+            echo "View logs:"
+            echo "  doctl apps logs ${DO_APP_ID} --type=run --follow"
+            echo "═══════════════════════════════════════════════════════"
+
+      # Alternative: Deploy to Droplet via SSH (commented out)
+      # Uncomment if deploying to a droplet instead of App Platform
+      # - add_ssh_keys:
+      #     fingerprints:
+      #       - "YOUR_SSH_KEY_FINGERPRINT"
+      #
       # - run:
-      #     name: "Push to Docker Hub"
+      #     name: "Deploy to Digital Ocean Droplet"
       #     command: |
-      #       echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-      #       docker tag migratingassistant-api:${CIRCLE_SHA1} yourusername/migratingassistant-api:${CIRCLE_SHA1}
-      #       docker tag migratingassistant-api:${CIRCLE_SHA1} yourusername/migratingassistant-api:latest
-      #       docker push yourusername/migratingassistant-api:${CIRCLE_SHA1}
-      #       docker push yourusername/migratingassistant-api:latest
+      #       ssh -o StrictHostKeyChecking=no ${DO_DROPLET_USER}@${DO_DROPLET_IP} << 'EOF'
+      #         cd /opt/migratingassistant
+      #
+      #         # Pull latest image
+      #         doctl registry login
+      #         docker pull registry.digitalocean.com/${DO_REGISTRY_NAME}/migratingassistant-api:${CIRCLE_SHA1}
+      #
+      #         # Stop and remove old container
+      #         docker-compose down
+      #
+      #         # Update docker-compose.yml to use new image tag
+      #         sed -i "s|image: .*|image: registry.digitalocean.com/${DO_REGISTRY_NAME}/migratingassistant-api:${CIRCLE_SHA1}|g" docker-compose.yml
+      #
+      #         # Start new container
+      #         docker-compose up -d
+      #
+      #         # Show status
+      #         docker-compose ps
+      #       EOF
 
 # Define workflows
 workflows:
   build-test-deploy:
     jobs:
+      # Build and test on all branches
       - build-and-test
-      - build-docker-image:
+
+      # Publish artifacts on master and dev
+      - publish-artifacts:
           requires:
             - build-and-test
           filters:
@@ -185,3 +426,41 @@ workflows:
               only:
                 - master
                 - dev
+
+      # Build and push Docker image on master and dev
+      - build-and-push-docker:
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only:
+                - master
+                - dev
+
+      # Deploy to staging (dev branch)
+      - deploy-to-digital-ocean:
+          requires:
+            - build-and-push-docker
+          filters:
+            branches:
+              only:
+                - dev
+
+      # Deploy to production (master branch) - requires manual approval
+      - hold-for-approval:
+          type: approval
+          requires:
+            - build-and-push-docker
+          filters:
+            branches:
+              only:
+                - master
+
+      - deploy-to-digital-ocean:
+          name: deploy-to-production
+          requires:
+            - hold-for-approval
+          filters:
+            branches:
+              only:
+                - master
