--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -215,11 +215,36 @@ jobs:
           command: |
             echo "Authenticating with Digital Ocean..."
             echo "Registry: registry.digitalocean.com/${DO_REGISTRY_NAME:-migratingassistant}"
+            echo "Branch: ${CIRCLE_BRANCH}"
 
-            if [ -z "$DO_ACCESS_TOKEN" ]; then
-              echo "ERROR: DO_ACCESS_TOKEN environment variable is not set!"
-              echo "Please add it to CircleCI Project Settings → Environment Variables"
-              exit 1
+            # Select appropriate token based on branch
+            if [ "$CIRCLE_BRANCH" = "master" ]; then
+              if [ -z "$DO_ACCESS_TOKEN_PRODUCTION" ]; then
+                echo "ERROR: DO_ACCESS_TOKEN_PRODUCTION environment variable is not set!"
+                echo "Please add it to CircleCI Project Settings → Environment Variables"
+                echo "This token is used for production deployments (master branch)"
+                exit 1
+              fi
+              TOKEN="${DO_ACCESS_TOKEN_PRODUCTION}"
+              echo "Using production token for master branch"
+            elif [ "$CIRCLE_BRANCH" = "dev" ]; then
+              if [ -z "$DO_ACCESS_TOKEN_STAGING" ]; then
+                echo "ERROR: DO_ACCESS_TOKEN_STAGING environment variable is not set!"
+                echo "Please add it to CircleCI Project Settings → Environment Variables"
+                echo "This token is used for staging deployments (dev branch)"
+                exit 1
+              fi
+              TOKEN="${DO_ACCESS_TOKEN_STAGING}"
+              echo "Using staging token for dev branch"
+            else
+              # Fallback to DO_ACCESS_TOKEN for other branches (backward compatibility)
+              if [ -z "$DO_ACCESS_TOKEN" ]; then
+                echo "ERROR: No access token found for branch: ${CIRCLE_BRANCH}"
+                echo "Please set DO_ACCESS_TOKEN, DO_ACCESS_TOKEN_STAGING, or DO_ACCESS_TOKEN_PRODUCTION"
+                exit 1
+              fi
+              TOKEN="${DO_ACCESS_TOKEN}"
+              echo "Using default token for ${CIRCLE_BRANCH} branch"
             fi
 
             if [ -z "$DO_REGISTRY_NAME" ]; then
@@ -229,7 +254,7 @@ jobs:
               exit 1
             fi
 
-            doctl auth init --access-token ${DO_ACCESS_TOKEN}
+            doctl auth init --access-token ${TOKEN}
             doctl registry login
 
             echo "✓ Successfully authenticated with Digital Ocean Container Registry"
@@ -322,7 +347,38 @@ jobs:
       - run:
           name: "Authenticate with Digital Ocean"
           command: |
-            doctl auth init --access-token ${DO_ACCESS_TOKEN}
+            echo "Authenticating with Digital Ocean for deployment..."
+            echo "Branch: ${CIRCLE_BRANCH}"
+
+            # Select appropriate token based on branch
+            if [ "$CIRCLE_BRANCH" = "master" ]; then
+              if [ -z "$DO_ACCESS_TOKEN_PRODUCTION" ]; then
+                echo "ERROR: DO_ACCESS_TOKEN_PRODUCTION environment variable is not set!"
+                echo "Please add it to CircleCI Project Settings → Environment Variables"
+                exit 1
+              fi
+              TOKEN="${DO_ACCESS_TOKEN_PRODUCTION}"
+              echo "Using production token for master branch"
+            elif [ "$CIRCLE_BRANCH" = "dev" ]; then
+              if [ -z "$DO_ACCESS_TOKEN_STAGING" ]; then
+                echo "ERROR: DO_ACCESS_TOKEN_STAGING environment variable is not set!"
+                echo "Please add it to CircleCI Project Settings → Environment Variables"
+                exit 1
+              fi
+              TOKEN="${DO_ACCESS_TOKEN_STAGING}"
+              echo "Using staging token for dev branch"
+            else
+              # Fallback to DO_ACCESS_TOKEN for backward compatibility
+              if [ -z "$DO_ACCESS_TOKEN" ]; then
+                echo "ERROR: No access token found for branch: ${CIRCLE_BRANCH}"
+                exit 1
+              fi
+              TOKEN="${DO_ACCESS_TOKEN}"
+              echo "Using default token for ${CIRCLE_BRANCH} branch"
+            fi
+
+            doctl auth init --access-token ${TOKEN}
+            echo "✓ Successfully authenticated with Digital Ocean"
 
       # Deploy to Digital Ocean App Platform
       - run:
@@ -332,17 +388,48 @@ jobs:
             echo "Digital Ocean Deployment"
             echo "═══════════════════════════════════════════════════════"
 
-            # Validate environment variables
-            if [ -z "$DO_APP_ID" ]; then
-              echo "ERROR: DO_APP_ID environment variable is not set!"
-              echo ""
-              echo "To fix this:"
-              echo "1. Go to https://cloud.digitalocean.com/apps"
-              echo "2. Create an app or get your existing app ID"
-              echo "3. Add DO_APP_ID to CircleCI:"
-              echo "   Project Settings → Environment Variables → Add Variable"
-              echo ""
-              exit 1
+            # Select appropriate App ID based on branch
+            if [ "$CIRCLE_BRANCH" = "master" ]; then
+              if [ -z "$DO_APP_ID_PRODUCTION" ]; then
+                echo "ERROR: DO_APP_ID_PRODUCTION environment variable is not set!"
+                echo "This is required for production deployments (master branch)"
+                echo ""
+                echo "To fix this:"
+                echo "1. Go to https://cloud.digitalocean.com/apps"
+                echo "2. Create a production app or get your existing app ID"
+                echo "3. Add DO_APP_ID_PRODUCTION to CircleCI:"
+                echo "   Project Settings → Environment Variables → Add Variable"
+                echo ""
+                exit 1
+              fi
+              APP_ID="${DO_APP_ID_PRODUCTION}"
+              ENVIRONMENT="production"
+              echo "Deploying to PRODUCTION environment"
+            elif [ "$CIRCLE_BRANCH" = "dev" ]; then
+              if [ -z "$DO_APP_ID" ]; then
+                echo "ERROR: DO_APP_ID environment variable is not set!"
+                echo "This is required for staging deployments (dev branch)"
+                echo ""
+                echo "To fix this:"
+                echo "1. Go to https://cloud.digitalocean.com/apps"
+                echo "2. Create a staging app or get your existing app ID"
+                echo "3. Add DO_APP_ID to CircleCI:"
+                echo "   Project Settings → Environment Variables → Add Variable"
+                echo ""
+                exit 1
+              fi
+              APP_ID="${DO_APP_ID}"
+              ENVIRONMENT="staging"
+              echo "Deploying to STAGING environment"
+            else
+              # Fallback for other branches
+              if [ -z "$DO_APP_ID" ]; then
+                echo "ERROR: DO_APP_ID not set for branch: ${CIRCLE_BRANCH}"
+                exit 1
+              fi
+              APP_ID="${DO_APP_ID}"
+              ENVIRONMENT="${CIRCLE_BRANCH}"
+              echo "Deploying to ${ENVIRONMENT} environment"
             fi
 
             if [ -z "$DO_REGISTRY_NAME" ]; then
@@ -355,10 +442,13 @@ jobs:
             REGISTRY_URL="registry.digitalocean.com/${REGISTRY_NAME}"
             IMAGE_TAG="${CIRCLE_SHA1}"
 
-            echo "App ID: ${DO_APP_ID}"
-            echo "Registry: ${REGISTRY_URL}"
-            echo "Image: migratingassistant-api:${IMAGE_TAG}"
-            echo "Branch: ${CIRCLE_BRANCH}"
+            echo ""
+            echo "Deployment Configuration:"
+            echo "  Environment: ${ENVIRONMENT}"
+            echo "  App ID: ${APP_ID}"
+            echo "  Registry: ${REGISTRY_URL}"
+            echo "  Image: migratingassistant-api:${IMAGE_TAG}"
+            echo "  Branch: ${CIRCLE_BRANCH}"
             echo ""
 
             echo "Deploying image: ${REGISTRY_URL}/migratingassistant-api:${IMAGE_TAG}"
@@ -366,19 +456,19 @@ jobs:
 
             # Trigger deployment
             echo "Triggering deployment (this may take 2-5 minutes)..."
-            doctl apps create-deployment ${DO_APP_ID} --wait
+            doctl apps create-deployment ${APP_ID} --wait
 
             echo ""
             echo "✓ Deployment completed successfully!"
             echo ""
             echo "═══════════════════════════════════════════════════════"
-            echo "Deployment Summary"
+            echo "Deployment Summary - ${ENVIRONMENT^^}"
             echo "═══════════════════════════════════════════════════════"
             echo "Image: ${REGISTRY_URL}/migratingassistant-api:${IMAGE_TAG}"
-            echo "App: https://cloud.digitalocean.com/apps/${DO_APP_ID}"
+            echo "App: https://cloud.digitalocean.com/apps/${APP_ID}"
             echo ""
             echo "View logs:"
-            echo "  doctl apps logs ${DO_APP_ID} --type=run --follow"
+            echo "  doctl apps logs ${APP_ID} --type=run --follow"
             echo "═══════════════════════════════════════════════════════"
 
       # Alternative: Deploy to Droplet via SSH (commented out)
